[package]
name = "mdscrape"
version = "0.2.0"
authors = ["Sahan Fernando <sahan.h.fernando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.13", features = ["json", "stream"] }
tokio = { version = "^1.13.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive", "rc"] }
walkdir = "2.3.1"
indicatif = "^0.15.0"
argparse = "*"
futures = "^0.3.5"
url = "*"
uuid = { version = "^0.8", features = ["serde"] }
simple_logger = "^1.11.0"
rand = "*"
regex = "^1.3.9"
jemallocator = "0.3.0"
log = "0.4.11"
governor = "^0.4.2"
